feat: add google-charts

--- a/rslang/package.json
+++ b/rslang/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.1.0",
     "lord-icon-element": "^3.3.3",
     "lottie-web": "^5.8.1",
+    "angular-google-charts": "^2.2.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
