--- a/rslang/package.json
+++ b/rslang/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "echarts": "^5.3.0",
     "lord-icon-element": "^3.3.3",
     "lottie-web": "^5.8.1",
-    "angular-google-charts": "^2.2.2",
+    "ngx-echarts": "^8.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
